--- a/Task1_ClassTimeTable/index.html
+++ b/Task1_ClassTimeTable/index.html
@@ -26,7 +26,7 @@
             <td colspan="2">
                 B1-ADA(DCP) <br> B2-WD(JHV) <br> B3-CN(OPM)</td>
             <td colspan="2">
-                WD(JHV)
+                WD(JHV)💻
             </td>
             <td>
                 ADA(RKS)
@@ -42,7 +42,7 @@
             <td>Tuesday</td>
             <td colspan="2">
                 B1-DS(VGP) <br>
-                B3-WD(JHV)
+                B3-WD(JHV)💻
             </td>
             <td colspan="2">DS(VGP)</td>
             <td>CN(JMS)🥱</td>
@@ -55,7 +55,7 @@
                 B1-CN(CGC)<br>
                 B2-DS(VGP) <br>
                 B3-ADA(DCP) <br>
-                B4-WD(JHV)
+                B4-WD(JHV)💻
             </td>
             <td colspan="2">
                 ADA(DCP)
@@ -73,7 +73,7 @@
         <tr>
             <td>Thursday</td>
             <td colspan="2">
-                B1-WD(JHV) <br>
+                B1-WD(JHV)💻 <br>
                 B2-CN(CGC)
             </td>
             <td>PE(OPM)</td>
