--- a/Task1_ClassTimeTable/index.html
+++ b/Task1_ClassTimeTable/index.html
@@ -61,7 +61,7 @@
                 ADA(DCP)
             </td>
             <td>
-                CN(JMS)🥱
+                CN(JMS)😒
             </td>
             <td>
                 PE(NST)
