--- a/Task7_Analog_Clock/index.html
+++ b/Task7_Analog_Clock/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Responsive Sticky Navigation Menu</title>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analog Clock</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
     <div class="clock">
-        This is a clock
+        <div class="outer-clock-face">
+            <div class="marking marking-one"></div>
+            <div class="marking marking-two"></div>
+            <div class="marking marking-three"></div>
+            <div class="marking marking-four"></div>
+            <div class="inner-clock-face">
+                <div class="hand hour-hand"></div>
+                <div class="hand min-hand"></div>
+                <div class="hand second-hand"></div>
+            </div>
+        </div>
     </div>
-    <div class="outer-clock-face">
-        outer-clock-face
-    </div>
-
 </body>
 
 </html>
