--- a/Task7_Analog_Clock/index.html
+++ b/Task7_Analog_Clock/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Responsive Sticky Navigation Menu</title>
+<title>Analog clock</title>
 
 <head>
     <meta charset="UTF-8">
@@ -22,6 +22,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
