change path of images

--- a/Task3_SimplePortfolio/index.html
+++ b/Task3_SimplePortfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="portfoliocss.css">
+    <link rel="stylesheet" href="phoneportfolio.css">
 
 </head>
 
@@ -41,7 +42,7 @@
         </h1>
         <div id="myphoto">
             <div class="myphoto">
-                <img src="/imgportfolio/myphoto.jpeg" alt="">
+                <img src="./imgportfolio/myphoto.jpeg" alt="">
             </div>
             <p>I'm a student of VGEC.I do mainly work on javascript and c++. I done one project in java language using
                 OOP.Currently i am in 3rd year of Information Technology so i exploring new things related web
@@ -74,7 +75,7 @@
                 competitive environment.
             </p>
             <div class="proj">
-                <img src="/imgportfolio/projects.jpeg" alt="">
+                <img src="./imgportfolio/projects.jpeg" alt="">
             </div>
 
         </div>
@@ -87,7 +88,7 @@
         </h1>
         <div id="skyl">
             <div class="skyl">
-                <img src="/imgportfolio/skills.jpg" alt="">
+                <img src="./imgportfolio/skills.jpg" alt="">
             </div>
             <p>
                 <b> Programming : </b> C C++ Java <br>
@@ -119,7 +120,7 @@
                 P.P.Savani Chaitanya Vidhya Sankul, Abrama-Surat<br>
             </p>
             <div class="edu">
-                <img src="/imgportfolio/education.jpeg" alt="">
+                <img src="./imgportfolio/education.jpeg" alt="">
             </div>
         </div>
 
@@ -130,17 +131,18 @@
             Here you can contact me
         </h1>
         <div id="reach">
-            <a href="https://www.linkedin.com/in/bhavyadevani/" target="_blank"> <img src="/imgportfolio/linkedin.jpeg"
+            <a href="https://www.linkedin.com/in/bhavyadevani/" target="_blank"> <img src="./imgportfolio/linkedin.jpeg"
                     alt="Linkedin" style="height: 100px;padding: 15px;"></a>
 
             <a href="https://www.instagram.com/bhavydevani/?next=%2F" target="_blank"> <img
-                    src="/imgportfolio/instagram.png" alt="Instagram" style="height: 100px;padding: 15px;"></a>
+                    src="./imgportfolio/instagram.png" alt="Instagram" style="height: 100px;padding: 15px;"></a>
 
-            <a href="mailto:bhavypdevani31@gmail.com" target="_blank"> <img src="/imgportfolio/gmail.jpg" alt="Gmail"
+            <a href="mailto:bhavypdevani31@gmail.com" target="_blank"> <img src="./imgportfolio/gmail.jpg" alt="Gmail"
                     style="height: 100px;padding: 15px;"></a>
         </div>
 
     </section>
+    <script src="phone.js"></script>
 
 </body>
 
