add x(twitter) link

--- a/Task3_SimplePortfolio/index.html
+++ b/Task3_SimplePortfolio/index.html
@@ -74,6 +74,14 @@
                 within a
                 competitive environment.
             </p>
+            <p>
+                <b>3.Scientific Calculator</b>
+                I created a comprehensive scientific calculator using Object-Oriented Programming (OOP) concepts in JavaFX. This calculator incorporates a wide range of basic scientific functions as well as a visually
+                interactive Trigonometric Graph feature.
+                I designed this calculator to cater to both basic and advanced scientific calculations. Users can
+                perform fundamental arithmetic operations and explore trigonometric functions through an interactive
+                graphing feature.
+            </p>
             <div class="proj">
                 <img src="./imgportfolio/projects.jpeg" alt="">
             </div>
@@ -138,6 +146,9 @@
                     src="./imgportfolio/instagram.png" alt="Instagram" style="height: 100px;padding: 15px;"></a>
 
             <a href="mailto:bhavypdevani31@gmail.com" target="_blank"> <img src="./imgportfolio/gmail.jpg" alt="Gmail"
+                    style="height: 100px;padding: 15px;"></a>
+
+            <a href="https://twitter.com/bhavydevani" target="_blank"> <img src="./imgportfolio/x-twitter" alt="X"
                     style="height: 100px;padding: 15px;"></a>
         </div>
 
