Changed text in index.html

--- a/Task6_Tell_me_Joke/index.html
+++ b/Task6_Tell_me_Joke/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>For a new joke please reload the page and just wait </h1>
+    <h1>For a new joke please reload/refresh the page and just wait </h1>
     <div id="joke">
         <!-- How are you? -->
     </div>
